[package]
name = "pnn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
md5 = "0.7.0"
itertools = "0.8.2"
pnn-sys = { path = "../pnn-sys" }
libc = "0.2"
log = "0.4.14"
tabbycat = { git = "https://github.com/SchrodingerZhu/tabbycat", features=["attributes"]}